# GhostShell

./: .env.example  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
Ghost_shell/: __init__.py  cli.py
Ghost_shell/core/: __init__.py  ai_model.py  config.py
Ghost_shell/prompts/: __init__.py  templates.py
Ghost_shell/utils/: __init__.py  command_executor.py  file_handler.py  logger.py
