[metadata]
name = ghost-shell
version = attr: Ghost_shell.__version__
author = Maarij Aqeel
author_email = maarijaqeel3200@gmail.com
description = AI-powered terminal assistant for command and code generation
url = https://github.com/Maarij-Aqeel/GhostShell
platform = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    google-generativeai>=0.3.0
    python-dotenv>=1.0.0
    rich>=13.0.0
    pydantic>=2.0.0

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0
    pre-commit>=2.20.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0

[options.entry_points]
console_scripts =
    ghostshell = Ghost_shell.cli:main
    gshell = Ghost_shell.cli:main
    gsh = Ghost_shell.cli:main

[options.package_data]
Ghost_shell = py.typed

# Tool configurations
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
